# ai-masterclass-2025

./: .gitignore  README.md  pyproject.toml
distributions/masterclass-agents/: build.yaml  run.yaml
distributions/masterclass-minimal/: run.yaml
frontend/: Containerfile  README.md
notebooks/: mcp.ipynb  react.ipynb
unit-1/: README.md
unit-1/distributions/masterclass-agents/: build.yaml
unit-1/distributions/masterclass-minimal/: build.yaml
unit-1/notebooks/: client.ipynb  rag.ipynb
unit-2/: p3_docling_agentic.ipynb  p3_solutions_tool.py
unit-3/: README.md
unit2/: README.md  advanced_rag.ipynb  p2_advanced_rag.ipynb  requirements.txt  solutions.py
